# FastClassCU

./: .env.example  .gitignore  CHECKLIST.md  DEPLOYMENT.md  README.md  compose.yml
ai-assistant-service/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
ai-assistant-service/alembic/: README  env.py
ai-assistant-service/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
ai-assistant-service/tests/: test_memory.py  test_workflows.py
analytics-service/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
analytics-service/alembic/: env.py
analytics-service/app/: config.py  deps.py  (+4 more)
answers-service/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
assignments-service/: .env.example  Dockerfile  docker-compose.yml
auth-service/: .env.example  .gitignore  Dockerfile  docker-compose.yml  providers.yaml.example  requirements.txt  service_clients.yaml
classroom-service/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
collaboration-service/: .env.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
content-service/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
docker/: postgres-init.sh
frontend-service/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
libs/fastclass-shared/: pyproject.toml
libs/fastclass-shared/fastclass_shared/: __init__.py  auth.py  context.py  events.py  http.py  logging.py  metrics.py  rate_limit.py  tracing.py
(+248 files in other folders)
