[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastclass-shared"
version = "0.1.0"
description = "Shared infrastructure helpers for FastClass services"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "redis",
]
